--- a/P4/Makefile
+++ b/P4/Makefile
@@ -6,13 +6,19 @@ CXX = g++
 CPPFLAGS = -Wall -g  -I$(INC) -c
 
 
-all: $(BIN)/pruebavariaciones
+all: $(BIN)/letras_backtracking
 
 # ************ Generación de documentación ******************
 documentacion:
 	doxygen doc/doxys/Doxyfile
 
 # ************ Compilación de módulos ************
+$(BIN)/letras_backtracking: $(OBJ)/variaciones.o $(OBJ)/pruebavariaciones.o $(OBJ)/utilidades.o
+	$(CXX) -o $(BIN)/letras_backtracking  $(OBJ)/letras_backtracking.o $(OBJ)/variaciones.o
+
+$(OBJ)/letras_backtracking.o: $(SRC)/letras_backtracking.cpp $(INC)/variaciones.h 
+	$(CXX) $(CPPFLAGS) $(SRC)/letras_backtracking.cpp -o $(OBJ)/letras_backtracking.o 
+
 $(BIN)/pruebavariaciones: $(OBJ)/variaciones.o $(OBJ)/pruebavariaciones.o
 	$(CXX) -o $(BIN)/pruebavariaciones  $(OBJ)/pruebavariaciones.o $(OBJ)/variaciones.o
 
@@ -21,7 +27,7 @@ $(OBJ)/pruebavariaciones.o: $(SRC)/pruebavariaciones.cpp $(INC)/variaciones.h
 $(OBJ)/variaciones.o: $(SRC)/variaciones.cpp $(INC)/variaciones.h
 	$(CXX) $(CPPFLAGS) $(SRC)/variaciones.cpp -o $(OBJ)/variaciones.o
 
-$(OBJ)/utilidades.o: $(SRC)/utilidades.cpp $(INC)/imagen.h $(INC)/utilidades.h 
+$(OBJ)/utilidades.o: $(SRC)/utilidades.cpp $(INC)/utilidades.h 
 	$(CXX) $(CPPFLAGS) $(SRC)/utilidades.cpp -o $(OBJ)/utilidades.o	
 # ************ Limpieza ************
 clean :
